[package]
name = "garta"
description = "Garta is going to be a GPX viewer, analyzer and editor for GTK3"
version = "0.2.0-dev"
authors = ["Timo Saarinen <zaari@swiss-email.neomailbox.net>"]
publish = false

[build-dependencies]
serde_codegen = "0.9"

[dependencies]
image       = "0.12"
hyper       = "0.10"
hyper-rustls= "^0.3.1"
chrono      = "0.2" # TODO: "0.3"
log         = "0.3"
env_logger  = "0.4"

lazy_static = "0.2"
regex       = "0.2"
rand        = "0.3"
num_cpus    = "1.2"
xml-rs      = "=0.3.6" # TODO: 0.3
assert      = "0.7"
#gettext-rs  = "*"

serde       = "0.9.7"
serde_derive= "0.9.7"
serde_json  = "0.9.7"

glib        = "^0.1.1"
gdk         = "^0.5.1"
gdk-sys     = "^0.3.2"
gdk-pixbuf  = "^0.1.1"
gtk         = "^0.1.1"
gio         = "^0.1.1"
cairo-rs    = "^0.1.1"

[features]
default = ["gtk/v3_16"]
gtk_3_10 = ["gtk/v3_10"]
gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools

