[package]
name = "garta"
description = "Garta is going to be a GPX viewer, analyzer and editor for GTK3"
version = "0.2.0-dev"
authors = ["Timo Saarinen <timo.p.saarinen@gmail.com>"]
publish = false

[build-dependencies]
serde_codegen = "0.9"

[dependencies]
image       = "0.15"
hyper       = "0.10" # TODO: "0.11"
hyper-rustls= "0.6"  # TODO: "0.10"
chrono      = "0.2"  # TODO: "0.3"
log         = "0.3"
env_logger  = "0.4"

lazy_static = "0.2.8"
regex       = "0.2"
rand        = "0.3"
num_cpus    = "1.6"
xml-rs      = "0.6"
assert      = "0.7"
#gettext-rs  = "*"

serde       = "0.9" # TODO: 1.0
serde_derive= "0.9" # TODO: 1.0
serde_json  = "0.9" # TODO: 1.0

glib        = "^0.1.2"
gdk         = "^0.5.2"
gdk-sys     = "^0.3.3"
gdk-pixbuf  = "^0.1.2"
gtk         = "^0.1.2"
gio         = "^0.1.2"
cairo-rs    = "^0.1.2"

[features]
default = ["gtk/v3_16"]
gtk_3_10 = ["gtk/v3_10"]
gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools

